2014-04-14  Ramon Novoa  <rnovoa@artica.es>

	* plugins/who.sh: Output some text when there are no users connected.
	  Otherwise the module goes to unkown.

2014-03-13  Mario Pulido <mario.pulido@artica.es>

	* plugins/inventory: Distributions compatibility

2014-02-03  Mario Pulido <mario.pulido@artica.es>	

	* SunOS/make_solaris_package/README: Update compatible SunOS versions

2014-01-15  Sergio Martin <sergio.martin@artica.es>

	* pandora_revent: Update unix agent pandora_revent script
	to be compatible with api function of last version. Incident #347

2013-11-12  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent: Completely integrated plug-ins with modules.

2013-10-21  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent_daemon: Changed status return codes to conform to LSB
	  specs. Fixes bug #2397.

2013-10-13  Junichi Satoh  <junichi@rworks.jp>

	* tentacle_server: Upgraded to 0.4.0. (Imported from trunk of
        tentacled repository.)
	Added IPv6 support.

2013-09-22  Junichi Satoh  <junichi@rworks.jp>

	* tentacle_client: Upgraded to 0.4.0. (Imported from trunk of
        tentacled repository.)
	Added IPv6 support.

2013-09-19  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent_installer: Changed the bash style == to =.

2013-09-19  Ramon Novoa  <rnovoa@artica.es>

	* Linux/pandora_agent.conf: The default user should not be pandora.

	* pandora_agent_installer: Removed some calls to chown that had the
	  potential to damage a Linux system.

	* pandora_agent: Delay the parsing of include files to make sure
	  that all variables that may affect a module's configuration
	  have already been read.

2013-09-13  Ramon Novoa  <rnovoa@artica.es>

	* pandora_agent: Added a missing parameter to a call to log_message.

2013-08-22  Dario Rodriguez <dario@artica.es>

	* pandora_agent_installer: Merged improvements from 4.1 branch
	to fix several bugs related to custom installation.
	
2013-07-10  Ramon Novoa  <rnovoa@artica.es>
