@@ -8,19 +8,6 @@ PANDORA_CFG=/etc/pandora
 
 LOG_TIMESTAMP=`date +"%Y/%m/%d %H:%M:%S"`
 
-#Disabled, now the package overwrite the previous files.
-#echo "Copy new version of plugins into dir"
-#cp -i /tmp/plugins/* /usr/share/pandora_agent/plugins/
-#rm /tmp/plugins -rf
-
-echo "Linking Pandora FMS Agent plugins directory to $PANDORA_CFG/plugins..."
-rm $PANDORA_CFG/plugins 2> /dev/null
-ln -s $PANDORA_HOME/plugins $PANDORA_CFG 2> /dev/null
-
-echo "Linking Pandora FMS Agent configuration to $PANDORA_CFG/pandora_agent.conf..."
-#~ rm $PANDORA_CFG/pandora_agent.conf 2> /dev/null
-#~ ln -s $PANDORA_HOME/pandora_agent.conf $PANDORA_CFG/pandora_agent.conf 
-
 echo "Start log of agent."
 echo "$LOG_TIMESTAMP Pandora FMS installer has created this file at startup" > $PANDORA_LOG
 
